--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
+
     <title>Document</title>=, initial-scale=1.0">
     
 
@@ -27,18 +29,15 @@ h1{color: blue;}
     </div>
     
     <div class="contenido">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique itaque laboriosam ipsa eaque. Nam ipsam ullam dolorum, cum veniam numquam itaque aliquid sequi fugit impedit voluptas sed id, dolor ipsum?
+        <p class="destacado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique itaque laboriosam ipsa eaque. Nam ipsam ullam dolorum, cum veniam numquam itaque aliquid sequi fugit impedit voluptas sed id, dolor ipsum?</p>
 
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum reprehenderit sit ipsam alias iure nulla repudiandae dolore perferendis! Quisquam, nam laboriosam distinctio assumenda vitae fuga vel aliquid et impedit odio.
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum reprehenderit sit ipsam alias iure nulla repudiandae dolore perferendis! Quisquam, nam laboriosam distinctio assumenda vitae fuga vel aliquid et impedit odio.</p>
 
-</p>
-</p>
+    </div>  
+
+    <div class="pie">
 
     </div>
-
-<div class="pie">
-
-</div>
 
 </div>
 
