Agrego un ancla

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ p{color: blue;}
     <br>
     <a href="tel:+54 11 62224452"> llamame </a>
     <a href="productos.html">voy a productos</a>
-    </address>
+    <a href="productos.html">voy a productos/a>
+</address>
 
 </footer>
 
